fix pokecard layout shift

--- a/src/stylesheets/components/PokeCardComponents/PokeCard.module.scss
+++ b/src/stylesheets/components/PokeCardComponents/PokeCard.module.scss
@@ -39,6 +39,7 @@
 
     .pokeImg {
       width: 90%;
+      height: 225px;
       image-rendering: pixelated;
       filter: drop-shadow(3px 5px 2px variables.$search-box-shadow);
     }
